--- a/index.html
+++ b/index.html
@@ -5,9 +5,31 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Portfolio</title>
+    <!-- font style link  -->
+        <link rel="preconnect" href="https://fonts.googleapis.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+        <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
+    <!-- linking with css file -->
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
+    <section class="section1">
+        <div class="half-width">
+            <h1>Welcome To</h1>
+            <h1><span class="orange-color">Moudud Ahammed</span>  World</h1>
+            <h3>Webdeveloper , Programmer and Public Speaker</h3>
+            <p>This is Moudud Ahammed Who never give up . 
+                I am good at programming , developing website and public speaking . 
+            </p>
+            <a class="link-button" href="https://www.facebook.com/moududahammed.redoy" target="_blank">HIRE ME</a>
+        </div>
+        <div class="half-width">
+            <img src="images/images/profile1.png" alt="profile-image">
+        </div>
+    </section>
     
+
+
+
 </body>
 </html>
