Second section has done with background image

--- a/index.html
+++ b/index.html
@@ -18,13 +18,25 @@
             <h1>Welcome To</h1>
             <h1><span class="orange-color">Moudud Ahammed</span>  World</h1>
             <h3>Webdeveloper , Programmer and Public Speaker</h3>
-            <p>This is Moudud Ahammed Who never give up . 
+            <p class="paragraph">This is Moudud Ahammed Who never give up . 
                 I am good at programming , developing website and public speaking . 
             </p>
             <a class="link-button" href="https://www.facebook.com/moududahammed.redoy" target="_blank">HIRE ME</a>
         </div>
         <div class="half-width">
             <img src="images/images/profile1.png" alt="profile-image">
+        </div>
+    </section>
+    <!-- First section End and second section start -->
+    <section class="section2">
+        <div class="half-width">
+            <img src="images/images/profile.png" alt="">
+        </div>
+        <div class="half-width">
+            <h1>Dream Big</h1>
+            <h3>Become a Webdeveloper</h3>
+            <p class="paragraph">Moudud Ahammed is living in Rangpur city . He has finished his Diploma in Engeering from Rangpur Polytechnic Institute , Rangpur</p>
+            <a class="link-button" href="https://www.facebook.com/moududahammed.redoy">Download Resume</a>
         </div>
     </section>
     
